--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,82 @@
-body{
-  font-family: sans-serif;
-  margin: 0;
-  padding: 0;
-}
-.container {
-  width: 500px;
-  margin: 0 auto;
-}
+body {
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
 
-h1 {
-  text-align: center;
-}
-
-p {
-  text-align: center;
-}
-
-*{
-  box-sizing: border-box;
-}
-.parent {
-  display: flex;
-}
-form {
-  margin-top: 20px;
-}
-
-.form-group {
-  margin-bottom: 10px;
-}
-
-label {
-  font-weight: bold;
-}
-
-input {
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-}
+  }
   
+  .container {
+    width: 500px;
+    margin: 0 auto;
+  }
+
+  header {
+    background-color: paleturquoise;
+    width: auto;
+    height: 40px;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  p {
+    text-align: center;
+  }
+
+  *{
+    box-sizing: border-box;
+  }
+  .parent {
+    display: flex;
+  }
+  form {
+    margin-top: 20px;
+  }
+  
+  .form-group {
+    margin-bottom: 10px;
+  }
+  
+  label {
+    font-weight: bold;
+  }
+  
+  input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+  }
+    
 .triangle-image {
-  text-align: center;
-  margin-top: 0px;
+  text-align: center; 
+  margin-top: 0px; 
 }
 
 .triangle-image img {
-  width: 500px;
-  height: auto;
-  display: block;
+  width: 500px; 
+  height: auto; 
+  display: block; 
 }
 
-button {
-  width: 100px;
-  margin-top: 20px;
-}
-
-.hasil {
-  margin-top: 20px;
-}
-
-p {
-  margin-bottom: 10px;
-}
-
-.gambar {
-  margin-top: 20px;
-}
-
-img {
-  width: 200px;
-}
+  button {
+    width: 100px;
+    margin-top: 20px;
+  }
+  
+  .hasil {
+    margin-top: 20px;
+  }
+  
+  p {
+    margin-bottom: 10px;
+  }
+  
+  .gambar {
+    margin-top: 20px;
+  }
+  
+  img {
+    width: 200px;
+  }
+  
