--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,88 @@
 body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  }
-  
-  .container {
-    width: 500px;
-    margin: 0 auto;
-  }
+header {
+  background-color: paleturquoise;
+  text-align: center;
+  padding: 10px 0;
+}
 
-  header {
-    background-color: paleturquoise;
-    width: auto;
-    height: 40px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  p {
-    text-align: center;
-  }
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
 
-  *{
-    box-sizing: border-box;
-  }
-  .parent {
-    display: flex;
-  }
-  form {
-    margin-top: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 10px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-    
-.triangle-image {
-  text-align: center; 
-  margin-top: 0px; 
+#mencariluas,
+#mencarikeliling {
+  width: 150px;
+  margin: 0 10px;
+}
+
+.container {
+  width: 80%;
+  max-width: 800px;
+  text-align: center;
+  margin: 20px auto;
+}
+
+h1,
+p {
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+form {
+  margin-top: 20px;
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+
+.kelilinginput {
+  text-align: center;
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  width: calc(100% - 22px);
+  padding: 10px;
+  border: 1px solid #ccc;
 }
 
 .triangle-image img {
-  width: 500px; 
-  height: auto; 
-  display: block; 
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+  max-height: 300px;
 }
 
-  button {
-    width: 100px;
-    margin-top: 20px;
-  }
-  
-  .hasil {
-    margin-top: 20px;
-  }
-  
-  p {
-    margin-bottom: 10px;
-  }
-  
-  .gambar {
-    margin-top: 20px;
-  }
-  
-  img {
-    width: 200px;
-  }
-  
+.center {
+  text-align: center;
+  margin-top: 20px;
+}
+
+button {
+  width: 100px;
+  margin: 10px;
+}
+
+.hasil {
+  text-align: center;
+  margin-top: 20px;
+}
+
+p {
+  margin-bottom: 10px;
+}
